it was weird but the problem fixed

--- a/unitTests_revised.ipynb
+++ b/unitTests_revised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -133,13 +133,13 @@
     "    for i in range(10):\n",
     "        data=np.random.random(size=10).tolist()\n",
     "        l=4\n",
-    "        assert all(dist_prob_plus(data))>=0 and all(dist_prob_parallel(data,l))\n",
+    "        assert all(dist_prob_plus(data))>=0 and all(dist_prob_parallel(data,l))>=0\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -402,14 +402,13 @@
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.5.1, pytest-2.8.1, py-1.4.30, pluggy-0.3.1\n",
       "rootdir: /Users/wsswemily/Desktop/Sta663_Final_Project, inifile: \n",
-      "collected 23 items / 1 errors \n",
+      "collected 22 items \n",
       "\u001b[0m\n",
       "test_dist_prob_plus_parallel.py ..\n",
       "test_distance_sq.py .......\n",
       "test_getCentroids.py .\n",
       "test_getLabels.py .\n",
       "test_kmeans.py .\n",
-      "test_kmeansplusplus.py .\n",
       "test_kmeansplusplus_parallel.py .\n",
       "test_log_cost.py .\n",
       "test_point_sq.py ...\n",
@@ -417,12 +416,7 @@
       "test_shouldStop.py ...\n",
       "test_weights.py .\n",
       "\n",
-      "==================================== ERRORS ====================================\n",
-      "___________________ ERROR collecting test_dist_prob_plus.py ____________________\n",
-      "test_dist_prob_plus.py:1: in <module>\n",
-      "\u001b[1m    from kmeans_combined import dist_prob_plus, dist_prob_parallel\u001b[0m\n",
-      "\u001b[1m\u001b[31mE   ImportError: No module named 'kmeans_combined'\u001b[0m\n",
-      "\u001b[1m\u001b[31m===================== 23 passed, 1 error in 75.15 seconds ======================\u001b[0m\n"
+      "\u001b[32m\u001b[1m========================== 22 passed in 69.95 seconds ==========================\u001b[0m\n"
      ]
     }
    ],
