--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -140,7 +140,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Step 1: Choose "
+   ]
   },
   {
    "cell_type": "markdown",
