yayyyy more stuff added

--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "K-means is a data-partitioning algorithm that separates n observations into k partitions. Due to its simplicity of implementation, its easy interpretability, and its ability to categorize data based on desired features, it remains one of the most popular algorithms in fields of statistics and machine learning. However, the key issue with k-means comes from its efficiency and scalability. As the size of datasets continues to increase, implementing k-means on data of any magnitude becomes computationally infeasible. A recently proposed variation of k-means, k-means++, provides a robust method of selecting the initial centers, essentially giving an optimal solution. However, due to the number of passes over the data required in a naive implementation, even clusters a million data points into 100 partitions would be exceedingly slow. In order to combat this, a parallelized version of k-means++ is proposed, k-means $||$. This version uses a sampling factor $\\ell$ to dramatically reduce the number of passes while still arriving at an equivalent solution of partitions. This paper will implement k-means++ and k-means$||$ in both sequential and parallel setting and compare the results both in terms of efficiency and equivalency of partition arrangements."
+    "K-means is a data-partitioning algorithm that separates n observations into k partitions. Due to its simplicity of implementation, its easy interpretability, and its ability to categorize data based on desired features, it remains one of the most popular algorithms in fields of statistics and machine learning. However, the key issue with k-means comes from its efficiency and scalability. As the size of datasets continues to increase, implementing k-means on data of any magnitude becomes computationally infeasible. A recently proposed variation of k-means, k-means++, provides a robust method of selecting the initial centers, essentially giving an optimal solution. However, due to the number of passes over the data required in a naive implementation, even clusters a million data points into 100 partitions would be exceedingly slow. In order to combat this, a parallelized version of k-means++ is proposed, k-means $||$. This version uses an over-sampling factor $\\ell$ to dramatically reduce the number of passes while still arriving at an equivalent solution of partitions. This paper will implement k-means++ and k-means$||$ in both sequential and parallel setting and compare the results both in terms of efficiency and equivalency of partition arrangements."
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the example above, we can data can be clustered into three partitions based on the similarity between observations. In industry, a common application of clusters is in market segmentation. Taking the example of a retailer, k-means clustering can be used as a means to understand their total addressable market. Given that there total market is comprised of people from many different incomes, locations, and type of consumers, clustering allows them to understand which groups are most similar based on these attributes and thus designing targeted marketing campaigns for each distinct group."
+    "In the example above, we can observe that data can be clustered into three partitions based on the similarity between observations. In industry, a common application of clusters is in market segmentation. Taking the example of a retailer, k-means clustering can be used as a means to understand their total addressable market. Given that their total market is comprised of people from many different incomes, locations, and type of consumers, clustering allows them to understand which groups are most similar based on these attributes and thus designing targeted marketing campaigns for each distinct group."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The k-means++ algorithm addresses the problem of subompital clustering arrangements by creating a procedure with which to select the inital cluster centers.  With the k-means++ initialization, we are guaranteed to find a solution that is $O(\\log k)$ competitive to the optimal k-means solution.\n",
+    "The k-means++ algorithm addresses the problem of suboptimal clustering arrangements by creating a procedure with which to select the inital cluster centers.  With the k-means++ initialization, we are guaranteed to find a solution that is $O(\\log k)$ competitive to the optimal k-means solution.\n",
     "\n",
     "In k-means++, the centers are first chosen uniformly at random from the observations. Then, each subsequent cluster center is chosen from the remaining data points with probability proportional to its squared distance from the point's closest existing cluster center. The intuition behind this approach is that spreading out the k initial cluster centers is a good thing, and this approach allows us to choose inital center points that are not only consistent, but approximate the optimal solution. After this point we can then proceed with the standard approach for k-means clustering."
    ]
@@ -141,7 +141,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1: Choose "
+    "Step 1: $\\textit{C}$ $\\leftarrow$ Sample a point uniformly at random from dataset X to form initial centroids;\n",
+    "\n",
+    "Step 2-4: For j in range(k-1):\n",
+    "    \n",
+    "  a. Compute square distance: $d^2(x,C)=min||x-c_i||^2$ for $i=1,2...n$, with n=number of data points in X;\n",
+    "\n",
+    "  b. Compute sampling probability for each point in X with probability= $\\frac{d^2(x,C)}{\\phi(X(c))}$, where $\\phi(X(c))=\\sum_{x\\in X}d^2(x,C)$;\n",
+    "  \n",
+    "  c. Sample x $\\in$ X with probability= $\\frac{d^2(x,C)}{\\phi(X(c))}$;\n",
+    "  \n",
+    "  d. Include x as one of the initial centroids $\\textit{C}$ $\\leftarrow$ $\\textit{C} \\cup \\{x\\}$ ;\n",
+    "\n",
+    "Step 5: End loop after the initial centroids are chosen. \n",
+    "\n",
+    "Step 6: Use the initial centroids to perform standard k-means clustering.\n"
    ]
   },
   {
@@ -337,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADD TEXT HERE"
+    "The real world dataset in NYCBoroughs.csv contains latitude and longitude of three boroughs of New York City: Bronx, Brooklyn, and Staten Island. The dataset includes 150,000 observations with 50,000 observations for each borough, which serves as a big data problem. The three boroughs are geographically well separated, therefore, we tested each algorithm applying number of clusters equal to three. "
    ]
   },
   {
