yayyy added more again

--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -215,7 +215,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Step 1: $\\textit{C}$ $\\leftarrow$ Sample a point uniformly at random from dataset X to form initial centroids;\n",
+    "\n",
+    "Step 2: \n",
+    "\n",
+    "a. Calculate initial cost $\\psi$ $\\leftarrow$ $\\phi(x(C))$, where $\\phi(X(c))=\\sum_{x\\in X}d^2(x,C)$\n",
+    "\n",
+    "b. Calculate number of iterations $O(log(\\psi))$= int$(log(\\psi))$;\n",
+    "\n",
+    "for r in round(an integer value that states the number of rounds to perform step 3-6 for large dataset):\n",
+    "\n",
+    "Step 3-6:\n",
+    "\n",
+    "a. $\\textit{C'}$\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
