--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -306,7 +306,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADD TEXT HERE"
+    "As k-means is often talked about as an embarrassingly parallelizable algorithm--meaning that the clustering can be worked on in different partitions at the same time--there are large gains in optimization to be made. The authors Bahmani et al. recommend that for 6 clusters, the optimal number of machines m is defined by $m =\\sqrt{\\frac{n}{k}}$, this would be that in our case we should ideally be using 40 partitions. While we do not have anything close this amount of resources, there are still significant gains to be made, even in a local parallelization on a 4 core machine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to parallelize our implementation of k-means$||$, we first try a multicore approach. While this yields some gains, it is not as effective as we would like due to the fact that only some of our functions lend themselves to an MC implementation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead, we are able to significantly improve on this by using an ipyparallel approach with 4 cores. In doing this we achieve a total run time of 20something seconds. This is faster than both the k-means++ and the Numba implementation of k-means$||$."
    ]
   },
   {
